# safere

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARKS.md  DESIGN.md  DIAGNOSTICS.md  INTENTIONAL_DIVERGENCES.md  LICENSE  PLAN.md  README.md  RELEASING.md  TESTING.md  UTF8.md  collect-benchmark-results.sh  pmd-ruleset.xml  pom.xml  run-benchmarks.sh  run-cpp-benchmarks.sh  run-exhaustive-expander.sh  run-exhaustive-sweep.sh  run-go-benchmarks.sh  run-java-benchmarks.sh  run-java-memory-benchmarks.sh
.agents/skills/bug-hunt-fix/: SKILL.md
.agents/skills/daily-repo-assist/: SKILL.md
.agents/skills/divergence-bug-fix/: SKILL.md
.agents/skills/divergence-result-review/: SKILL.md
.agents/skills/fuzzer-run-triage/: SKILL.md
.agents/skills/linear-time-review/: SKILL.md
.agents/skills/parser-bug-fix/: SKILL.md
.agents/skills/review-fix-loop/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benchmark-results/: bench-batch1.txt  bench-batch2.txt  bench-batch3.txt
design/: CAPTURE_SEMANTICS.md  CROSSCHECK_TEST_ORACLE.md  ENGINE_DIAGNOSTICS_DECISION_TABLE.md  ENGINE_PATH_EQUIVALENCE.md  GRAPHEME_REGION_MATCHING.md  ISSUE_474_DIAGNOSTICS_PLAN.md  ISSUE_474_PHASE_6_VERIFICATION.md  ISSUE_474_PHASE_7_PERFORMANCE.md  MATCHER_STATE_MACHINE.md  PARSER_DIALECT_COMPATIBILITY.md  SEMANTIC_INVARIANTS.md  TRINO_SAFERE_COMPATIBILITY.md  UTF8_BYTE_INPUT.md  UTF8_BYTE_INPUT_IMPLEMENTATION_PLAN.md
safere/: pom.xml
safere-benchmarks/: CONFIGURATION_EVALUATION.md  benchmark-data.json  pom.xml
safere-benchmarks/cpp/: CMakeLists.txt  re2_benchmark.cc
safere-benchmarks/go/: go.mod  regexp_benchmark.go
safere-benchmarks/scripts/: compare-benchmarks.py
safere-crosscheck/: README.md  pom.xml
safere-exhaustive/: README.md  pom.xml
safere-ffm-re2/: pom.xml
safere-ffm-re2/src/main/native/: CMakeLists.txt  re2_shim.cpp  re2_shim.h
safere-fuzz/: README.md  pom.xml
safere-fuzz/scripts/: run-fuzz-test.sh
safere-unicode/: README.md  generate-unicode-tables.sh  pom.xml
safere-vector/: pom.xml
tools/exhaustive/: run-control-escape-sweep.sh
tools/unicode/: README.md  UnicodeTableGenerator.java  generate-unicode-tables.sh  verify-unicode-tables.sh
(+415 files in other folders)
